Edit main finish

--- a/index.html
+++ b/index.html
@@ -47,6 +47,148 @@
         </div>
     </header>
 <!-- HERO NAV -->
+<!-- SITE MAIN -->
+<main>
+    <!-- SITE GREAT -->
+           <section class="great">
+               <div class="container great-container">
+                   <div class="great-hero">
+                       <h2 class="great-hero-heading">Great coffee
+                           made simple.</h2>
+                       <p class="great-hero-desc">Start your mornings with the world’s best coffees. Try our expertly
+                           curated artisan coffees from our best roasters delivered directly to your door, at your
+                           schedule.</p>
+                       <button class="main-btn">Create your plan</button>
+                   </div>
+               </div>
+           </section>
+    <!-- SITE GREAT -->
+    <!-- SITE OUR -->
+           <section class="our">
+               <div class="container our-container">
+                   <div class="our-section">
+                       <ul class="our-list">
+                           <li class="our-item">
+                               <img src="./images/kopi1.png" alt="img" width="256" height="193">
+                           </li>
+
+                           <li class="our-item">
+                               <img src="./images/kopi2.png" alt="img" width="256" height="193">
+                           </li>
+
+                           <li class="our-item">
+                               <img src="./images/kopi3.png" alt="img" width="256" height="193">
+                           </li>
+
+                           <li class="our-item">
+                               <img src="./images/kopi4.png" alt="img" width="256" height="193">
+                           </li>
+                       </ul>
+                   </div>
+               </div>
+               <div class="container">
+                   <div class="our-services">
+                       <ul class="services-list">
+                           <li class="services-item">
+                               <span class="services-item-span">Gran Espresso</span>
+                               <p class="services-item-desc">Light and flavorful blend with cocoa and black pepper for an
+                                   intense experience</p>
+                           </li>
+
+                           <li class="services-item">
+                               <span class="services-item-span">Planalto</span>
+                               <p class="services-item-desc">Brazilian dark roast with rich and velvety body, and hints of
+                                   fruits and nuts</p>
+                           </li>
+
+                           <li class="services-item">
+                               <span class="services-item-span">Piccollo</span>
+                               <p class="services-item-desc">Mild and smooth blend featuring notes of toasted almond and
+                                   dried cherry</p>
+                           </li>
+
+                           <li class="services-item">
+                               <span class="services-item-span">Danche</span>
+                               <p class="services-item-desc">Ethiopian hand-harvested blend densely packed with vibrant
+                                   fruit notes</p>
+                           </li>
+                       </ul>
+                   </div>
+               </div>
+           </section>
+    <!-- SITE OUR -->
+   <!-- SITE CHOOSE -->
+           <section class="choose">
+               <div class="container choose-container">
+                   <div class="choose-us">
+                       <h2 class="choose-us-heading">Why choose us?</h2>
+                       <p class="choose-us-paragraph">A large part of our role is choosing which particular coffees will be
+                           featured
+                           in our range. This means working closely with the best coffee growers to give
+                           you a more impactful experience on every level.</p>
+                   </div>
+
+                   <ul class="choose-list">
+                       <li class="choose-item">
+                           <span class="choose-item-span">Best quality</span>
+                           <p class="choose-item-desc">Discover an endless variety of the world’s best artisan coffee from
+                               each of our roasters.</p>
+                       </li>
+
+                       <li class="choose-item item">
+                           <span class="choose-item-span">Exclusive benefits</span>
+                           <p class="choose-item-desc">Special offers and swag when you subscribe, including 30% off your
+                               first shipment.</p>
+                       </li>
+
+                       <li class="choose-item etim">
+                           <span class="choose-item-span">Free shipping</span>
+                           <p class="choose-item-desc">We cover the cost and coffee is delivered fast. Peak freshness:
+                               guaranteed.</p>
+                       </li>
+                   </ul>
+               </div>
+           </section>
+   <!-- SITE CHOOSE -->
+   <!-- SITE WORKS -->
+           <section class="works">
+               <div class="container">
+                   <div class="works-top">
+                       <p class="wors-top-desc">How it works</p>
+                       <img class="works-top-img" src="./images/Group-31.png" alt="img" width="791" height="31">
+
+                       <ul class="works-top-list">
+                           <li class="works-top-list-item">
+                               <img class="works-top-list-item-img" src="./images/01.png" alt="img" width="90" height="72">
+                               <h3 class="works-top-list-item-heading">Pick your
+                                   coffee</h3>
+                               <p class="works-top-list-item-desc">Select from our evolving range of artisan coffees. Our
+                                   beans are ethically sourced and we pay fair prices for them. There are new coffees in
+                                   all profiles every month for you to try out.</p>
+                           </li>
+                           <li class="works-top-list-item">
+                               <img class="works-top-list-item-img" src="./images/02.png" alt="img" width="101"
+                                   height="72">
+                               <h3 class="works-top-list-item-heading">Choose the frequency</h3>
+                               <p class="works-top-list-item-desc">Customize your order frequency, quantity, even your
+                                   roast style and grind type. Pause, skip or cancel your subscription with no commitment
+                                   through our online portal.</p>
+                           </li>
+                           <li class="works-top-list-item">
+                               <img class="works-top-list-item-img" src="./images/03.png" alt="img" width="98" height="72">
+                               <h3 class="works-top-list-item-heading">Receive and enjoy!</h3>
+                               <p class="works-top-list-item-desc">We ship your package within 48 hours, freshly roasted.
+                                   Sit back and enjoy award-winning world-class coffees curated to provide a distinct
+                                   tasting experience.</p>
+                           </li>
+                       </ul>
+                       <button class="main-btn button">Create your plan</button>
+                   </div>
+               </div>
+           </section>
+   <!-- SITE WORKS -->
+</main>
+   <!-- SITE MAIN -->
 </body>
 
 </html>
