edit footer finish

--- a/index.html
+++ b/index.html
@@ -189,6 +189,44 @@
    <!-- SITE WORKS -->
 </main>
    <!-- SITE MAIN -->
+    <!-- SITE FOOTER -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-bottom">
+                <a class="footer-bottom-left-link" href="#">
+                    <img src="./images/Group-5.png" alt="logo img" width="236" height="26">
+                </a>
+                <ul class="footer-bottom-list">
+                    <li class="footer-bottom-item">
+                        <a href="#">HOME</a>
+                    </li>
+
+                    <li class="footer-bottom-item">
+                        <a href="#">ABOUT US</a>
+                    </li>
+
+                    <li class="footer-bottom-item">
+                        <a href="#">Create your plan</a>
+                    </li>
+                </ul>
+
+                <ul class="footer-bottom-right-list">
+                    <li class="footer-bottom-right-list-item">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                    </li>
+
+                    <li class="footer-bottom-right-list-item">
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                    </li>
+
+                    <li class="footer-bottom-right-list-item">
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+<!-- SITE FOOTER -->
 </body>
 
 </html>
