--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="nav">
                 <div class="hero">
                     <a class="hero-logo" href="#">
-                        <img src="./images/Group.svg.png" alt="coffe logo" width="236" height="26">
+                        <img src="./images/logo.svg" alt="coffe logo" width="236" height="26">
                     </a>
                 </div>
                 <div class="nav-hero">
