--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
     <title>2-dars</title>
 </head>
@@ -31,7 +32,7 @@
                         </li>
 
                         <li class="hero-item">
-                            <a href="#">
+                            <a href="about.html">
                                 ABOUT US
                             </a>
                         </li>
@@ -212,7 +213,7 @@
 
                 <ul class="footer-bottom-right-list">
                     <li class="footer-bottom-right-list-item">
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-facebook-square"></i></a>
                     </li>
 
                     <li class="footer-bottom-right-list-item">
